@@ -830,63 +830,15 @@ ipmi_lan_sendto (int s,
                  const struct sockaddr *to,
                  socklen_t tolen)
 {
-  void *_buf = NULL;
-  ssize_t bytes_sent;
-  size_t _len;
-  size_t pad_len = 0;
-  ssize_t rv = -1;
-
-  if (!buf
-      || !len)
-    {
-      SET_ERRNO (EINVAL);
-      return (-1);
-    }
-
-  /*
-    Note from Table 12-8, RMCP Packet for IPMI via Ethernet footnote
-    Some LAN adapter chips may have a problem where packets of overall
-    lengths 56, 84, 112, 128, or 156 are not handled correctly. The
-    PAD byte is added as necessary to avoid these overall
-    lengths. Remote console software must use the PAD byte when
-    formatting packets to any 10/100 Ethernet device that accepts RMCP
-    packets. -- Anand Babu
-  */
-  _len = len;
-  if (_len == 56
-      || _len == 84
-      || _len == 112
-      || _len == 128
-      || _len == 156)
-    pad_len += IPMI_LAN_PKT_PAD_SIZE;
-  
-  _len += pad_len;
-  
-  if (_len < pad_len)
-    {
-      SET_ERRNO (EMSGSIZE);
-      goto cleanup;
-    }
-  
-  if (!(_buf = malloc (_len)))
-    {
-      ERRNO_TRACE (errno);
-      goto cleanup;
-    }
-  
-  memset (_buf, 0, _len);
-  memcpy (_buf, buf, len);
-  
-  if ((bytes_sent = sendto (s, _buf, _len, flags, to, tolen)) < 0)
-    {
-      ERRNO_TRACE (errno);
-      goto cleanup;
-    }
-  
-  rv = (bytes_sent - pad_len);
- cleanup:
-  free (_buf);
-  return (rv);
+  /* achu: Specification table 13-8, indicates legacy padding for IPMI 1.5, but 
+   * it appears it is specific to Ethernet 10/100 lan chips.
+   *
+   * It is so legacy at this point it is probably not worth providing.
+   * In addition, it is difficult to calculate if a pad is necessary
+   * b/c it appears the pad should be for the ethernet frame, not the
+   * IP packet.
+   */ 
+  return (ipmi_network_sendto (s, buf, len, flags, to, tolen));
 }
 
 ssize_t
