@@ -47,6 +47,8 @@ o In libfreeipmi 'sel' sub-library, support
   IPMI_SEL_PARAMETER_UTC_OFFSET,
   IPMI_SEL_STRING_FLAGS_UTC_TO_LOCALTIME, and
   IPMI_SEL_STRING_FLAGS_LOCALTIME_TO_UTC options/flags.
+o In libfreeipmi, do not pad legacy byte on IPMI 1.5 packets.  Legacy
+  byte should be padded on ethernet frame, not IP packet.
 
 FreeIPMI 1.2.1 - 08/22/12
 -------------------------
